[package]

name = "radix_trie"
version = "0.0.9"
description = "Generic radix trie data-structure."

license = "MIT"
authors = ["Michael Sproul <micsproul@gmail.com>"]

repository = "https://github.com/michaelsproul/rust_radix_trie"
documentation = "https://michaelsproul.github.io/rust_radix_trie/"

keywords = ["trie", "patricia", "collection", "generic", "prefix"]

[dependencies]

nibble_vec = "0.0.3"
"endian-type" = "0.1.2"
serde = { version = "0.8", optional = true }

[dev-dependencies]

quickcheck = "0.2"
rand = "0.3"
serde_test = "0.8"
