[package]
name = "radix_trie"
version = "0.1.4"
description = "Generic radix trie data-structure."

license = "MIT"
authors = ["Michael Sproul <micsproul@gmail.com>"]

repository = "https://github.com/michaelsproul/rust_radix_trie"
documentation = "https://docs.rs/radix_trie/"
readme = "README.md"

keywords = ["trie", "patricia", "collection", "generic", "prefix"]
categories = ["data-structures", "text-processing"]

[dependencies]
nibble_vec = "~0.0.3"
"endian-type" = "0.1.2"
serde = { version = "1.0", optional = true }

[dev-dependencies]
quickcheck = "0.4"
rand = "0.3"
serde_test = "1.0"

[badges]
travis-ci = { repository = "michaelsproul/rust_radix_trie" }
